<resources>
    <string name="app_name" translatable="false">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wellcome">Wellcome your chat app where the world became a small village</string>
    <string name="your_app">Life became eassier with your app chatApp</string>
    <string name="skip">Skip</string>
    <string name="register_tuto">If you do not have account click the button bellow to register</string>
    <string name="register_button">Register</string>
    <string name="messaging">ChatApp is yours, give you the oportunity to communicate all over the world</string>
    <string name="messaging_fun">In your chat app you can have fun with your friend and all other users if you want</string>
    <string name="login_tuto">If you have account click the button bellow now</string>

    <string name="log_in">log in</string>

    <string name="forgot_your_password">Forgot your password</string>

    <string name="create_account">Login Account</string>
    <string name="register">register</string>
    <string name="reset">Reset</string>
    <string name="reset_your_password">By clicking RESET, you will receive an email to reset your password</string>
    <string name="login">login</string>
    <string name="Login_java">Login</string>
    <string name="All_fields_are_required">All fields are required</string>
    <string name="Authentification_failed">Authentification failed</string>
    <string name="Reset_your_password">Reset your password</string>
    <string name="Email_required">Email required</string>
    <string name="Pls_check_your_email">Pls check your email</string>
    <string name="password_checker">password must be at least 6 characters</string>
    <string name="email_password_incorecte">you cannot register with this email or password</string>
    <string name="Messages">Messages</string>
    <string name="empty_message">you can not send empty message</string>
    <string name="Profile">Profile</string>
    <string name="Friends">Friends</string>
    <string name="users">Users</string>
    <string name="change_password">change password</string>
    <string name="no_connexion">You are not connected to any sources of internet, activate you connexion or have fun by playing a game</string>
    <string name="play_tic_tac_toe">Play X-O</string>
    <string name="play_math_game">play math game</string>
    <string name="interval">MAX RANGE :</string>
    <string name="choosed">Choosed :</string>
    <string name="addition">Addition (+)</string>
    <string name="extraction" translatable="false">Extraction (-)</string>
    <string name="multiplication_x">Multiplication (x)</string>
    <string name="play2" translatable="false">Play!</string>
    <string name="time_limit" translatable="false">Time Limit</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="correct">Correct!</string>
    <string name="wrong">wrong</string>
    <string name="inprogress" translatable="false">Upload in progress</string>
    <string name="notsetected" translatable="false">No image selected</string>
    <string name="failed" translatable="false">Failed!</string>
</resources>