<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginTutoActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Widget.Support.CoordinatorLayout"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/login_tuto"

            android:textColor="@color/black"

            android:textSize="20dp" />




    </LinearLayout>


    <ImageView
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="259dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:src="@drawable/chat" />
    <Button
        android:id="@+id/login"
        style="@style/Widget.Support.CoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="104dp"
        android:background="@color/colorPrimaryVariant"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryVariant" />

    <ImageButton
        android:background="@color/colorPrimary"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"

        android:id="@+id/arrow"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="53dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="9dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/skip" />

</RelativeLayout>