<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FF616D"
    tools:context=".MessagingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Widget.Support.CoordinatorLayout"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/messaging_fun"
            android:textColor="@color/black"

            android:textSize="20dp" />




    </LinearLayout>
    <ImageView
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="204dp"
        android:src="@drawable/chat" />

    <TextView
        style="@style/Widget.Support.CoordinatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginBottom="129dp"

        android:gravity="center"
        android:text="@string/messaging"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageButton
        android:background="#FF616D"
        android:id="@+id/arrow"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="53dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="9dp"
        android:layout_weight="1"

        android:textColor="@color/black"
        android:text="@string/skip" />

</RelativeLayout>