<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:padding="10sp"
tools:context=".MathGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/rangeLinearLayout"
            android:layout_width="158dp"
            android:layout_height="183dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/radio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="22dp"
                android:paddingBottom="22dp"
                android:text="@string/interval"
                android:textSize="24sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:text="NB1 :"

                    android:textSize="30sp"

                    />

                <EditText
                    android:id="@+id/numero1"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="20"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:text="NB2 :"
                    android:textSize="30sp" />

                <EditText
                    android:id="@+id/numero2"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="20"
                    android:textSize="24sp" />
            </GridLayout>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio"
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:checkedButton="@id/addition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="6dp"
                android:text="@string/choosed"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/addition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addition"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/extraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extraction"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/multiplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplication_x"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_marginTop="24dp"
            android:onClick="play"
            android:padding="30dp"
            android:text="@string/play2"
            android:textSize="60sp"
            android:visibility="visible"
            app:backgroundTint="@color/colorPrimaryVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerEditText" />

        <EditText
            android:id="@+id/timerEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/time_limit"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="setPlayAgainButton"
            android:text="@string/play_again"
            app:backgroundTint="#669900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="TextView"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="#CC0000"
            android:padding="10sp"
            android:text="30s"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="13sp"
            android:text="15 + 15"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFBB33"
            android:padding="10sp"
            android:text="10/10"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="game"
                android:tag="0"
                android:text="777"
                android:textSize="50sp"
                app:backgroundTint="#00DDFF"
                app:cornerRadius="0dp"
                app:elevation="0dp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="fill"
                />
            "/>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="game"
                android:tag="1"
                android:text="777"
                android:textSize="50sp"
                app:backgroundTint="#AAAAAA"
                app:cornerRadius="0dp"
                app:elevation="0dp"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="fill"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="game"
                android:tag="2"
                android:text="555"
                android:textSize="50sp"
                app:backgroundTint="#FF8800"
                app:cornerRadius="0dp"
                app:elevation="0dp"
                android:layout_gravity="fill"
                android:layout_column="0"
                android:layout_row="1"
                />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="game"
                android:tag="3"
                android:text="0"
                android:textSize="50sp"
                app:backgroundTint="#FF4444"
                app:cornerRadius="0dp"
                app:elevation="0dp"
                android:layout_gravity="fill"

                android:layout_column="1"

                android:layout_row="1"
                />

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>